수정사항: 메인- 그래프를 채우는 색을 없앰, 오른쪽 Y축의 값을 없앰, 범주에서 User와 Friend를 의미하는 색이 하늘색으로만 출력되는 오류를 수정, 정상적으로 빨강과 파랑으로 출력되게 함 월간 - 원형 그래프를 삭제하고 꺾은선 그래프로 대체 연간 - 마찬가지로 색깔을 구분하여 가시성 up Report - 각 화면마다 Daily, weekly report 등으로 개명

--- a/app/src/main/res/layout/activity_month.xml
+++ b/app/src/main/res/layout/activity_month.xml
@@ -50,8 +50,8 @@
         </LinearLayout>
 
 
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/PieChart"
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/LineChart"
             android:layout_width="match_parent"
             android:layout_height="240dp"
             android:layout_below="@+id/layout_statistics1"
@@ -63,9 +63,9 @@
             android:id="@+id/btn3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/PieChart"
+            android:layout_below="@id/LineChart"
             android:layout_marginBottom="20dp"
-            android:text="@string/Button3"
+            android:text="@string/Button5"
             android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold" />
 
@@ -77,7 +77,7 @@
             android:background="#88D1F3"
             android:fontFamily="sans-serif-black"
             android:lineSpacingExtra="8sp"
-            android:text="Your posture of this month was very good. You may be the god of postural correction if you keep doing this?"
+            android:text="It's a normal Posture."
             android:textSize="18sp"
             android:textStyle="bold" />
     </RelativeLayout>
