--- a/app/src/main/res/layout/fragment_contents.xml
+++ b/app/src/main/res/layout/fragment_contents.xml
@@ -216,10 +216,10 @@
 
             </TextView>
 
-            <HorizontalScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="190dp"
-                android:scrollbarThumbHorizontal="@null">
+<!--            <HorizontalScrollView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="190dp"-->
+<!--                android:scrollbarThumbHorizontal="@null">-->
 
                 <LinearLayout
                     android:id="@+id/lay9"
@@ -228,123 +228,123 @@
                     android:background="?android:attr/windowBackground"
                     android:orientation="horizontal">
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="150dp"
-                        android:layout_height="173dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        app:cardCornerRadius="10dp">
+<!--                    <androidx.cardview.widget.CardView-->
+<!--                        android:layout_width="150dp"-->
+<!--                        android:layout_height="173dp"-->
+<!--                        android:layout_marginRight="10dp"-->
+<!--                        android:layout_marginLeft="10dp"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:layout_marginBottom="10dp"-->
+<!--                        app:cardCornerRadius="10dp">-->
 
 
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:layout_marginLeft="0dp"
-                            android:layout_marginRight="0dp"
-                            android:layout_marginTop="0dp">
+<!--                        <LinearLayout-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:orientation="vertical"-->
+<!--                            android:layout_marginLeft="0dp"-->
+<!--                            android:layout_marginRight="0dp"-->
+<!--                            android:layout_marginTop="0dp">-->
 
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="110dp"
-                                android:id="@+id/image7"
-                                android:src="@drawable/contentpicture4">
-                            </ImageView>
-
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/string6"
-                                android:textSize="20sp">
-                            </TextView>
+<!--                            <ImageView-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="110dp"-->
+<!--                                android:id="@+id/image7"-->
+<!--                                android:src="@drawable/contentpicture4">-->
+<!--                            </ImageView>-->
 
 
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="150dp"
-                        android:layout_height="173dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        app:cardCornerRadius="10dp">
+<!--                            <TextView-->
+<!--                                android:layout_width="wrap_content"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:text="@string/string6"-->
+<!--                                android:textSize="20sp">-->
+<!--                            </TextView>-->
 
 
+<!--                        </LinearLayout>-->
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:layout_marginLeft="0dp"
-                            android:layout_marginRight="0dp"
-                            android:layout_marginTop="0dp">
+<!--                    </androidx.cardview.widget.CardView>-->
 
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="110dp"
-                                android:id="@+id/image8"
-                                android:src="@drawable/contentpicture5">
-
-                            </ImageView>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/string7"
-                                android:textSize="20sp">
-                            </TextView>
+<!--                    <androidx.cardview.widget.CardView-->
+<!--                        android:layout_width="150dp"-->
+<!--                        android:layout_height="173dp"-->
+<!--                        android:layout_marginRight="10dp"-->
+<!--                        android:layout_marginLeft="10dp"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:layout_marginBottom="10dp"-->
+<!--                        app:cardCornerRadius="10dp">-->
 
 
-                        </LinearLayout>
 
-                    </androidx.cardview.widget.CardView>
+<!--                        <LinearLayout-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:orientation="vertical"-->
+<!--                            android:layout_marginLeft="0dp"-->
+<!--                            android:layout_marginRight="0dp"-->
+<!--                            android:layout_marginTop="0dp">-->
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="150dp"
-                        android:layout_height="173dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        app:cardCornerRadius="10dp">
+<!--                            <ImageView-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="110dp"-->
+<!--                                android:id="@+id/image8"-->
+<!--                                android:src="@drawable/contentpicture5">-->
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:layout_marginLeft="0dp"
-                            android:layout_marginRight="0dp"
-                            android:layout_marginTop="0dp">
+<!--                            </ImageView>-->
 
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="110dp"
-                                android:id="@+id/image9"
-                                android:src="@drawable/contentpicture6">
-
-                            </ImageView>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/string8"
-                                android:textSize="20sp">
-                            </TextView>
+<!--                            <TextView-->
+<!--                                android:layout_width="wrap_content"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:text="@string/string7"-->
+<!--                                android:textSize="20sp">-->
+<!--                            </TextView>-->
 
 
-                        </LinearLayout>
+<!--                        </LinearLayout>-->
 
-                    </androidx.cardview.widget.CardView>
+<!--                    </androidx.cardview.widget.CardView>-->
+
+<!--                    <androidx.cardview.widget.CardView-->
+<!--                        android:layout_width="150dp"-->
+<!--                        android:layout_height="173dp"-->
+<!--                        android:layout_marginRight="10dp"-->
+<!--                        android:layout_marginLeft="10dp"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:layout_marginBottom="10dp"-->
+<!--                        app:cardCornerRadius="10dp">-->
+
+<!--                        <LinearLayout-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:orientation="vertical"-->
+<!--                            android:layout_marginLeft="0dp"-->
+<!--                            android:layout_marginRight="0dp"-->
+<!--                            android:layout_marginTop="0dp">-->
+
+<!--                            <ImageView-->
+<!--                                android:layout_width="match_parent"-->
+<!--                                android:layout_height="110dp"-->
+<!--                                android:id="@+id/image9"-->
+<!--                                android:src="@drawable/contentpicture6">-->
+
+<!--                            </ImageView>-->
+
+<!--                            <TextView-->
+<!--                                android:layout_width="wrap_content"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:text="@string/string8"-->
+<!--                                android:textSize="20sp">-->
+<!--                            </TextView>-->
+
+
+<!--                        </LinearLayout>-->
+
+<!--                    </androidx.cardview.widget.CardView>-->
 
                 </LinearLayout>
-            </HorizontalScrollView>
+<!--            </HorizontalScrollView>-->
         </LinearLayout>
 
 
