--- a/app/src/main/res/layout/youtube_view.xml
+++ b/app/src/main/res/layout/youtube_view.xml
@@ -49,13 +49,13 @@
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:id="@+id/lay8"
+            android:layout_width="375dp"
+            android:layout_height="300dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -65,153 +65,62 @@
 
             </TextView>
 
-            <HorizontalScrollView
+            <LinearLayout
+                android:id="@+id/lay9"
                 android:layout_width="wrap_content"
-                android:layout_height="190dp"
-                android:scrollbarThumbHorizontal="@null">
+                android:layout_height="wrap_content"
+                android:background="?android:attr/windowBackground"
+                android:orientation="horizontal">
+
+                <!--                <androidx.recyclerview.widget.RecyclerView-->
+                <!--                    android:id="@+id/scrap"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    app:layout_constraintEnd_toEndOf="parent"-->
+                <!--                    app:layout_constraintStart_toStartOf="parent"-->
+                <!--                    app:layout_constraintTop_toTopOf="parent">-->
+                <!--                </androidx.recyclerview.widget.RecyclerView>-->
 
                 <LinearLayout
-                    android:id="@+id/lay9"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/container"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:background="?android:attr/windowBackground"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="150dp"
-                        android:layout_height="173dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        app:cardCornerRadius="10dp">
+                    <ListView
+                        android:id="@+id/list"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content" />
 
 
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:layout_marginLeft="0dp"
-                            android:layout_marginRight="0dp"
-                            android:layout_marginTop="0dp">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="110dp"
-                                android:id="@+id/image7"
-                                android:src="@drawable/contentpicture4">
-                            </ImageView>
-
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/string6"
-                                android:textSize="20sp">
-                            </TextView>
-
-
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="150dp"
-                        android:layout_height="173dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        app:cardCornerRadius="10dp">
-
-
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:layout_marginLeft="0dp"
-                            android:layout_marginRight="0dp"
-                            android:layout_marginTop="0dp">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="110dp"
-                                android:id="@+id/image8"
-                                android:src="@drawable/contentpicture5">
-
-                            </ImageView>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/string7"
-                                android:textSize="20sp">
-                            </TextView>
-
-
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="150dp"
-                        android:layout_height="173dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        app:cardCornerRadius="10dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:layout_marginLeft="0dp"
-                            android:layout_marginRight="0dp"
-                            android:layout_marginTop="0dp">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="110dp"
-                                android:id="@+id/image9"
-                                android:src="@drawable/contentpicture6">
-
-                            </ImageView>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/string8"
-                                android:textSize="20sp">
-                            </TextView>
-
-
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-
+                    <!--비어있는 경우에 한해 사용할 예정-->
+<!--                    <TextView-->
+<!--                        android:id="@android:id/empty"-->
+<!--                        android:layout_width="fill_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginTop="15dp"-->
+<!--                        android:gravity="center_vertical|center_horizontal"-->
+<!--                        android:text="등록된 즐겨찾기가 없습니다."-->
+<!--                        android:textSize="15dp" />-->
                 </LinearLayout>
-            </HorizontalScrollView>
+                <!--                <fragment-->
+                <!--                    android:id="@+id/scrap"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    app:layout_constraintEnd_toEndOf="parent"-->
+                <!--                    app:layout_constraintStart_toStartOf="parent"-->
+                <!--                    app:layout_constraintTop_toTopOf="parent">-->
+                <!--                </fragment>-->
+                <!--                    <TextView-->
+                <!--                        android:layout_width="wrap_content"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:text="@string/string9"-->
+                <!--                        android:textSize="20sp"/>-->
+            </LinearLayout>
+
         </LinearLayout>
 
 
     </LinearLayout>
 
 </ScrollView>
-<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    tools:context=".MainActivity">-->
-
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/main_recycler_view"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"/>-->
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
